--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html class="no-js" lang="zh">
 <head>
-<title>所有文章 - 41616</title>
+<title>所有文章 · 41616</title>
 </head>
 <body>
 <table border=0  cellpadding=0 cellSpacing=0 width="100%">
