--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html class="no-js" lang="zh">
 <head>
 <title>所有文章 · 41616</title>
+<link rel="shortcut icon" href="/assets/image/OneRepublic.jpg">
 </head>
 <body>
 <table border=0  cellpadding=0 cellSpacing=0 width="100%">
