--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <script language=JavaScript>alert("又说多了！")</script>
       <script language=JavaScript>alert("不要忘了你的誓言！")</script>
       <script language=JavaScript>alert("祝贺你！你终于出来了！恭喜恭喜！")</script>
-     </p> <font color=#800000 face=楷体_GB2312 size=6>恭喜你,您是第<script src="http://ly.rs100.cn/webjsq.asp?action=freesoho&refresh=2&ty=True&picid=6"></script>个前来上当的人</font></td></tr>
+     </p>恭喜你,您是第<script src="http://ly.rs100.cn/webjsq.asp?action=freesoho&refresh=2&ty=True&picid=6"></script>个前来上当的人</td></tr>
 </table>
 </body>
 </html>
