--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <script language=JavaScript>alert("又说多了！")</script>
       <script language=JavaScript>alert("不要忘了你的誓言！")</script>
       <script language=JavaScript>alert("祝贺你！你终于出来了！恭喜恭喜！")</script>
-     </p>恭喜你,您是第<image src="https://www.hit-counts.com/counter.php?t=MTQ2MjQxMw"></image>个前来上当的人</td></tr>
+     </p><font size=10>恭喜你,您是第<image src="https://www.hit-counts.com/counter.php?t=MTQ2MjQxMw"></image>个前来上当的人</font></td></tr>
 </table>
 </body>
 </html>
